# sculk

./: .gitignore  CHANGELOG.md  Cargo.toml  Justfile  README.md  clippy.toml
.config/: nextest.toml
.github/workflows/: check.yml  release.yml
cli/: Cargo.toml  README.md
cli/src/: app.rs  key.rs  lib.rs  main.rs  relay.rs
core/: Cargo.toml  README.md
core/src/: error.rs  lib.rs
core/src/persist/: key.rs  mod.rs  profile.rs
core/src/tunnel/: event.rs  iroh.rs  mod.rs  ticket.rs
core/src/tunnel/iroh/: auth.rs  endpoint.rs  host.rs  join.rs  mod.rs  monitor.rs  session.rs  transport.rs
core/tests/: p2p_test.rs
docs/: deploy.md  develop.md  install.md  usage.md
docs/deploy/: service.md
packaging/arch/sculk-cli-bin/: PKGBUILD
packaging/arch/sculk-cli-git/: PKGBUILD
packaging/arch/sculk-tui-bin/: PKGBUILD
packaging/arch/sculk-tui-git/: PKGBUILD
scripts/: iroh-relay.service
scripts/deploy/: build.ps1  build.sh
scripts/install/: install.ps1  install.sh
scripts/uninstall/: uninstall.ps1  uninstall.sh
tui/: Cargo.toml  README.md
tui/src/: app.rs  clipboard.rs  config.rs  input.rs  main.rs  state.rs  tunnel.rs
tui/src/services/: mod.rs  persist.rs  terminal.rs
tui/src/services/tunnel/: events.rs  mod.rs  runtime.rs
tui/src/state/: actions.rs  context.rs  dispatch.rs  events.rs  footer_spec.rs  input_field.rs  logs.rs  machine.rs  mod.rs  persist.rs  types.rs  ui_specs.rs  view.rs
tui/src/state/tests/: mod.rs
tui/src/ui/: footer.rs  header.rs  logs.rs  mod.rs  popup.rs  tabs.rs  theme.rs
