[workspace]
members = ["core", "cli", "tui"]
resolver = "3"

[workspace.dependencies]
anyhow = "1.0.102"
iroh = "0.96.1"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
clap = { version = "4.5.60", features = ["derive"] }
