[workspace]
members = ["core", "cli", "tui"]
resolver = "3"

[workspace.package]
authors = ["KercyDing"]
edition = "2024"
license = "GPL-3.0"
repository = "https://github.com/KercyDing/sculk"
rust-version = "1.89"
version = "0.1.0"

[workspace.dependencies]
sculk = { path = "core", version = "0.1.0" }
anyhow = "1.0"
iroh = "0.96"
tokio = { version = "1.49", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5", features = ["derive"] }
arboard = "3.6"
dirs = "6"
rand = "0.10"
serde = { version = "1", features = ["derive"] }
toml = "1"
url = "2.5"
thiserror = "2"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"
