[package]
name = "sculk-cli"
version = "0.1.0"
edition = "2024"

[dependencies]
sculk-core = { path = "../core" }
anyhow.workspace = true
arboard = "3"
clap.workspace = true
dirs = "6.0.0"
rand = "0.9.2"
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "sculk"
path = "src/main.rs"
