[package]
name = "sculk-cli"
categories = ["network-programming", "command-line-utilities"]
description = "Minecraft P2P multiplayer tunnel CLI"
documentation = "https://docs.rs/sculk-cli"
include = ["/src/**", "/Cargo.toml", "/README.md"]
keywords = ["minecraft", "p2p", "tunnel", "cli"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sculk = { workspace = true, features = ["persist", "clipboard"] }
anyhow.workspace = true
clap.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true

[[bin]]
name = "sckc"
path = "src/main.rs"

[lints]
workspace = true
