[package]
name = "sculk-core"
version = "0.1.0"
edition = "2024"

[features]
default = []
ci = []
clipboard = ["dep:arboard"]
persist = ["dep:dirs", "dep:rand", "dep:serde", "dep:toml"]

[dependencies]
anyhow.workspace = true
iroh.workspace = true
tokio.workspace = true
tracing.workspace = true
url.workspace = true
arboard = { workspace = true, optional = true }
dirs = { workspace = true, optional = true }
rand = { workspace = true, optional = true }
serde = { workspace = true, optional = true }
toml = { workspace = true, optional = true }

[dev-dependencies]
rand.workspace = true
