[package]
name = "sculk-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
sculk-core = { path = "../core" }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures = "0.3.32"
ratatui = "0.30.0"
arboard = "3.6.1"
dirs = "6.0.0"
rand = "0.10.0"

[[bin]]
name = "sculk-tui"
path = "src/main.rs"
