[package]
name = "sculk-tui"
version = "0.1.0"
edition = "2024"

[dependencies]
sculk-core = { workspace = true, features = ["persist", "clipboard"] }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30"

[[bin]]
name = "sculk-tui"
path = "src/main.rs"
