[package]
name = "sculk-tui"
categories = ["network-programming", "command-line-utilities"]
description = "Minecraft P2P multiplayer tunnel TUI client"
documentation = "https://docs.rs/sculk-tui"
include = ["/src/**", "/Cargo.toml", "/README.md"]
keywords = ["minecraft", "p2p", "tunnel", "tui", "ratatui"]
readme = "README.md"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
sculk = { workspace = true, features = ["persist", "clipboard"] }
anyhow.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
crossterm = { version = "0.29", features = ["event-stream"] }
futures = "0.3"
ratatui = "0.30"
unicode-width = "0.2"

[[bin]]
name = "sckt"
path = "src/main.rs"
